--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,5 @@
 name: Travel Calculator
-author: Manuel Santibanez
+author: Manuel S
 description: Calculate the cost of a trip
 
 # Workflow configuration
