--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          tags: user/repo:latest
-          push: false
+          tags: travel-calculator:latest
+          load: true  # This loads the image into the Docker daemon
 
       - name: Run Travel Calculator
-        run: docker run -e GITHUB_ACTOR=${{ github.actor }} -e INPUT_EMAIL=${{ github.event.inputs.email }} user/repo:latest
+        run: |
+          docker images  # List available images for debugging
+          docker run --rm -e GITHUB_ACTOR=${{ github.actor }} -e INPUT_EMAIL=${{ github.event.inputs.email }} travel-calculator:latest
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           INPUT_EMAIL: ${{ github.event.inputs.email }}
