--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,8 @@
       "vscode": {
         "extensions": [
           "ms-python.python",
-          "ms-azuretools.vscode-docker"
+          "ms-azuretools.vscode-docker",
+          "GitHub.copilot"
         ]
       }
     },
